--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
               <span class="tech__subtitle">Fundamental Web Development</span>
             </div>
             <div class="techsBro two">
-              <i class="fab fa-vuejs icons__techs icons"></i>
-              <span class="tech__skill__title">Vue JS / SASS / Tailwind</span>
-              <span class="tech__subtitle">Frontend Web Development</span>
+              <i class="fab fa-sass icons__techs icons"></i>
+              <span class="tech__skill__title">SASS / Tailwind</span>
+              <span class="tech__subtitle">Frontend styling</span>
             </div>
             <div class="techsBro three">
               <i class="fab fa-node-js icons__techs icons"></i>
@@ -212,6 +212,11 @@
               <i class="fab fa-js icons__techs icons"></i>
               <span class="tech__skill__title">TypeScript</span>
               <span class="tech__subtitle">Software Development</span>
+            </div>
+            <div class="techsBro seven">
+              <i class="fab fa-react icons__techs icons"></i>
+              <span class="tech__skill__title">React JS / Vue JS</span>
+              <span class="tech__subtitle">JS Frameworks</span>
             </div>
           </div>
         </div>
